attribution/licensing/headers fixes to js parts

--- a/metrics/src/main/static/index.html
+++ b/metrics/src/main/static/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
-    <title>Micro-service metrics</title>
-    <link rel="stylesheet" href="css/metrics-hc.css">
+    <title>Spark - Example Metrics via HighCharts</title>
+    <link rel="stylesheet" href="css/metrics.css">
 </head>
 <body>
     <div id="occupation-service"></div>
     <div id="enquiry-search-service"></div>
+
+    <div class='warning'>
+        <p>This is an example implementation, based around the <a href="http://mootools.net">MooTools</a> javascript framework and the <a href="http://www.highcharts.com/">HighCharts</a> charting library.</p>
+        <p>
+            MooTools is released under the MIT license but use of HighCharts outside of whatever constitutes as non-commercial / personal use may be subject to a licensing fee - you should check their <a href="http://shop.highsoft.com/highcharts.html">pricing and licensing</a> options.
+        </p>
+
+        <img src="http://www.highcharts.com/images/stories/logohighcharts.png" />
+    </div>
 
 	<!-- libraries -->
     <script src='js/mootools-core.js'></script>
