added clear div to demo

--- a/metrics/src/main/static/index.html
+++ b/metrics/src/main/static/index.html
@@ -9,6 +9,7 @@
     <div id="occupation-service"></div>
     <div id="enquiry-search-service"></div>
 
+    <div class='clear'></div>
     <div class='warning'>
         <p>This is an example implementation, based around the <a href="http://mootools.net">MooTools</a> javascript framework and the <a href="http://www.highcharts.com/">HighCharts</a> charting library.</p>
         <p>
