add job service at production to graphs

--- a/metrics/src/main/static/index.html
+++ b/metrics/src/main/static/index.html
@@ -8,6 +8,7 @@
 <body>
     <div id="occupation-service"></div>
     <div id="enquiry-search-service"></div>
+    <div id="job-service"></div>
 
     <div class='clear'></div>
     <div class='warning'>
